--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Django Girls blog</title>
-</head>
-<body>
-    <div>
-        <h1><a href="">Django Girls Blog</a></h1>
-    </div>
-    <div>
-        <p>published: 14.06.2014, 12:14</p>
-        <h2><a href="">My first post</a></h2>
-        <p>Hello Python</p>
-    </div>
-    <div>
-        <p>published: 15.06.2014, 12:14</p>
-        <h2><a href="">My second post</a></h2>
-        <p>Hello Django</p>
-    </div>
-</body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                <p>published: {{ post.published_date }}</p>
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{  post.text | linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
